out/overlays/desktop/catbot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catbot-ingress
  namespace: cat-chatbot
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:175142243308:certificate/c5e7fb70-aaec-4319-9d28-7bcbd4bbbf3c
spec:
  ingressClassName: alb
  rules:
    - host: thecatbot.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5001
